# verify-firedancer

./: .gitignore  CMakeLists.txt  README.md  verify.py.in
res/data/: PK(pure).csv  TEMPLATE_TVPI(pure).csv
res/vstte/data/sample/: AI4BMC_zones_Z3.csv
scripts/: get_exper_brunch_stat.py  get_exper_res.py  metrics.yaml
seahorn/: CMakeLists.txt
seahorn/include/: bounds.h  config.h.in  nondet.h  proof_allocators.h  utils.h
seahorn/include/stubs/: fd_bits.h  fd_chacha20rng.h  fd_dcache_private.h  fd_fctl.h  fd_fseq.h  fd_fseq_private.h  fd_mcache.h  fd_mcache_private.h  fd_pod.h  fd_tcache.h  fd_tls_helper.h
seahorn/jobs/: CMakeLists.txt
seahorn/jobs/ballet/chacha20/ballet_chacha20_block/: CMakeLists.txt  ballet_chacha20_block_harness.c  sea.yaml
seahorn/jobs/ballet/chacha20/ballet_chacha20rng_init_delete/: CMakeLists.txt  ballet_chacha20rng_init_delete_harness.c  sea.yaml
seahorn/jobs/ballet/txn/ballet_txn_parse/: CMakeLists.txt  ballet_txn_parse_harness.c
seahorn/jobs/ballet/txn/ballet_txn_parse_minsz/: CMakeLists.txt  ballet_txn_parse_minsz_harness.c
seahorn/jobs/tango/dcache/tango_dcache_bounds_compact/: CMakeLists.txt  tango_dcache_bounds_compact_harness.c
seahorn/jobs/tango/dcache/tango_dcache_bounds_init_delete/: CMakeLists.txt  tango_dcache_bounds_init_delete_harness.c
seahorn/jobs/tango/fctl/tango_fctl_bounds_cfg_rx_add_done/: CMakeLists.txt  tango_fctl_bounds_cfg_rx_add_done_harness.c
seahorn/jobs/tango/fctl/tango_fctl_bounds_init_delete/: CMakeLists.txt  tango_fctl_bounds_init_delete_harness.c
seahorn/jobs/tango/fctl/tango_fctl_cr_query_update/: tango_fctl_cr_query_update_harness.c
seahorn/jobs/tango/fseq/tango_fseq_bounds_init_delete/: CMakeLists.txt  tango_fseq_bounds_init_delete_harness.c
seahorn/jobs/tango/fseq/tango_fseq_bounds_query/: CMakeLists.txt  sea.yaml  tango_fseq_bounds_query_harness.c
seahorn/jobs/tango/mcache/tango_mcache_bounds_init_delete/: CMakeLists.txt  tango_mcache_bounds_init_delete_harness.c
seahorn/jobs/tango/mcache/tango_mcache_bounds_publish/: CMakeLists.txt  tango_mcache_bounds_publish_harness.c
seahorn/jobs/tango/mcache/tango_mcache_bounds_query/: CMakeLists.txt  tango_mcache_bounds_query_harness.c
seahorn/jobs/tango/tcache/tango_tcache_bounds_init_delete/: CMakeLists.txt  sea.yaml  tango_tcache_bounds_init_delete_harness.c
seahorn/jobs/tango/tcache/tango_tcache_bounds_insert/: CMakeLists.txt  tango_tcache_bounds_insert_harness.c
seahorn/jobs/tango/tcache/tango_tcache_bounds_query/: CMakeLists.txt  sea.yaml  tango_tcache_bounds_query_harness.c
seahorn/jobs/util/util_fd_bits_svw/: CMakeLists.txt  util_fd_bits_svw_harness.c
seahorn/jobs/util/util_fd_cstr_to_ulong_seq/: CMakeLists.txt  util_fd_cstr_to_ulong_seq_harness.c
seahorn/jobs/util/util_fd_fibre/: CMakeLists.txt  sea.yaml  util_fd_fibre_harness.c
seahorn/jobs/util/util_fd_fibre_schedule/: CMakeLists.txt  util_fd_fibre_schedule_harness.c
seahorn/jobs/util/util_fd_hash/: CMakeLists.txt  util_fd_hash_harness.c
seahorn/jobs/util/util_fd_pod_accessors/: CMakeLists.txt  sea.yaml  util_fd_pod_accessors_harness.c
seahorn/jobs/util/util_fd_pod_init_delete/: CMakeLists.txt  util_fd_pod_init_delete_harness.c
seahorn/jobs/util/util_fd_pod_iter/: CMakeLists.txt  util_fd_pod_iter_harness.c
seahorn/jobs/util/util_fd_pod_query/: CMakeLists.txt  util_fd_pod_query_harness.c
seahorn/jobs/util/util_fd_pod_resize/: CMakeLists.txt  util_fd_pod_resize_harness.c
seahorn/jobs/waltz/quic/waltz_quic_decode_initial/: CMakeLists.txt  sea.yaml  waltz_quic_decode_initial_harness.c
seahorn/jobs/waltz/quic/waltz_quic_decrypt/: CMakeLists.txt  waltz_quic_decrypt_harness.c
seahorn/jobs/waltz/tls/waltz_quic_tls_client_hs/: CMakeLists.txt  waltz_quic_tls_client_hs_harness.c
seahorn/jobs/waltz/tls/waltz_quic_tls_server_hs/: CMakeLists.txt  waltz_quic_tls_server_hs_harness.c
seahorn/lib/: CMakeLists.txt  bcmp.c  bounds.c  nd_clam.c  proof_allocators.c
seahorn/stubs/: CMakeLists.txt  fd_log_override.c
seahorn/stubs/libc/: CMakeLists.txt  cstr_override.c  error_override.c  ucontext_override.c
seahorn/stubs/tango/: CMakeLists.txt  dcache_override.c  fctl_override.c  fseq_explicit_mem.c  fseq_override.c  mcache_override.c  tcache_override.c
seahorn/stubs/waltz/: CMakeLists.txt  fd_aes_base_ref_override.c  fd_ed25519_user_override.c  fd_sha_256_override.c  fd_tls_helper.c  fd_tls_proto_override.c
yaml/: CMakeLists.txt  sea.yaml  sea_base.yaml  sea_cex_base.yaml  sea_crab.yaml  sea_crab_base.yaml
yaml/domain-yaml/: CMakeLists.txt  fixed-tvpi-dbm.yaml  pk-pplite.yaml  pk.yaml  zones.yaml
